# ChangeLog for dev-java/javatoolkit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.48 2009/04/24 01:35:15 ranger Exp $

  24 Apr 2009; Brent Baude <ranger@gentoo.org> javatoolkit-0.3.0-r3.ebuild:
  Marking javatoolkit-0.3.0-r3 ppc64 for bug 265287

  24 Apr 2009; Brent Baude <ranger@gentoo.org> javatoolkit-0.3.0-r3.ebuild:
  Marking javatoolkit-0.3.0-r3 ppc64 for bug 265287

  23 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  javatoolkit-0.3.0-r3.ebuild:
  ia64/sparc stable wrt #265287

  18 Apr 2009; Markus Meier <maekke@gentoo.org> javatoolkit-0.3.0-r3:
  amd64/x86 stable, bug #265287

  11 Apr 2009; nixnut <nixnut@gentoo.org> javatoolkit-0.3.0-r3.ebuild:
  ppc stable #265287

*javatoolkit-0.3.0-r3 (07 Mar 2009)

  07 Mar 2009; Jesus Rivero <neurogeek@gentoo.org>
  +files/javatoolkit-0.3.0-python2.6.patch, +javatoolkit-0.3.0-r3.ebuild:
  Added patch to fix python-2.6 warnings. Bug #239479.

  04 Mar 2009; Petteri Räty <betelgeuse@gentoo.org>
  javatoolkit-0.3.0-r2.ebuild:
  Require xml use flag for python in order to have celementtree. Fixes bug
  #261218.

  28 Sep 2008; Vlastimil Babka <caster@gentoo.org>
  -files/0.2.0-use-sax-fixed.patch, -javatoolkit-0.2.0-r1.ebuild,
  -javatoolkit-0.3.0-r1.ebuild:
  Remove old.

  24 Sep 2008; Markus Meier <maekke@gentoo.org> javatoolkit-0.3.0-r2.ebuild:
  x86 stable, bug #236940

  14 Sep 2008; Kenneth Prugh <ken69267@gentoo.org>
  javatoolkit-0.3.0-r2.ebuild:
  amd64 stable, bug #236940

  11 Sep 2008; Brent Baude <ranger@gentoo.org> javatoolkit-0.3.0-r2.ebuild:
  stable ppc, bug 236940

  10 Sep 2008; Brent Baude <ranger@gentoo.org> javatoolkit-0.3.0-r2.ebuild:
  stable ppc64, bug 236940

  09 Sep 2008; Raúl Porcel <armin76@gentoo.org>
  javatoolkit-0.3.0-r2.ebuild:
  ia64 stable wrt #236940

  07 Sep 2008; Ferris McCormick <fmccor@gentoo.org>
  javatoolkit-0.3.0-r2.ebuild:
  Sparc stable, Bug #236940.
