@@ -1,6 +1,6 @@
 AUX javatoolkit-0.3.0-python2.6.patch 413 RMD160 3f881cc51eb9d5358ea14ec6e70b952bb7c15639 SHA1 7f2961e0c6c0ca1fb855a951d05e41eba2e51b50 SHA256 4128e060d2c3693717c64e443527380f548d663496bb982fe45463e6370d920d
 DIST javatoolkit-0.3.0.tar.bz2 16823 RMD160 14638e42599a469b3fb878a45dac2de69f6c6280 SHA1 6be5b4583920e9122cd1f295174b4deca0b853a9 SHA256 47bf8aad2ec58b2d850e8cbe57fe2707859d800b215b24387c7652a50353677c
 EBUILD javatoolkit-0.3.0-r2.ebuild 829 RMD160 b32adadf0a184a687b656894305d6a7da061d296 SHA1 f0c2a2cab5786da9914814bd96fca4e766c663fa SHA256 833e30a13adb05344b697486a754d2972cb977421d3b9934a2520b087670d602
-EBUILD javatoolkit-0.3.0-r3.ebuild 870 RMD160 f5b471f99e76b5c414651622f04906707483fca3 SHA1 4cb1d6158f01dff987ef40d5815afa0eccde811e SHA256 0a2df30e269c6a887b8838e1e85ac71e99703aca768fcf55c965ea41b1125bfd
-MISC ChangeLog 6949 RMD160 932bdd019a200f02a9e0e4d6ba833e5c4deec9da SHA1 2c494f52a57f8aa77c67295980eb261ab5b38f28 SHA256 091bee8723ce33038a66c7ab3e41eff7a6d47374de84c7fbf215060f8884dc34
+EBUILD javatoolkit-0.3.0-r3.ebuild 874 RMD160 d23358ebdbd86b28e5f197209f9712f0eaa0cde7 SHA1 62defaae10998ff299b47f6d0184b6ccf763499a SHA256 4b3b945f1175ce028c183b40e9a3ae54b1d80ba75da43739f2a83fa476276685
+MISC ChangeLog 7068 RMD160 c482d5bd0076ca67204774740371a6b55e9090a4 SHA1 d5c70ed8c58c6f97877e5de325921803874b9a3c SHA256 cf025e4f3e10e8fdde916ce998771fa001f2127cb9581bb684ee7aea11150680
 MISC metadata.xml 159 RMD160 8da0afd0f687b8985b7f0432fec737950271e354 SHA1 1d089c3afbfafd09e371d7806cc0c72a5c76e5a1 SHA256 da2aaa3223c5418688dfbba6f899648c5bcb2e4610126519a1a862913c4f8fa6
