@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/javatoolkit
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.48 2009/04/24 01:35:15 ranger Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.49 2010/02/07 20:19:32 pva Exp $
+
+  07 Feb 2010; Peter Volkov <pva@gentoo.org> javatoolkit-0.3.0-r3.ebuild:
+  Add inherit eutils: epatch is defined there.
 
   24 Apr 2009; Brent Baude <ranger@gentoo.org> javatoolkit-0.3.0-r3.ebuild:
   Marking javatoolkit-0.3.0-r3 ppc64 for bug 265287
